# Insert2Db

./: .gitignore  Database_Handler.py  PostgreSQL_Handler.py  README.MD  pyproject.toml  runme.py
